spacing fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -212,10 +212,10 @@ textarea:focus {
 @media screen and (max-width: 480px) {
   h1,
   h2 {
-    letter-spacing: -3px;
+    letter-spacing: -2px;
   }
 
   h3 {
-    letter-spacing: -2;
+    letter-spacing: -1;
   }
 }
